# AdventOfCode2022

./: .codecov.yml  CMakeLists.txt  README.md  run.cmd.in  run.sh.in
.github/workflows/: build-and-test-macos.yml.disabled  build-and-test-ubuntu.yml  build-and-test-windows.yml
01/: CMakeLists.txt  advent01.cpp  calorie_counting.cpp  calorie_counting.hpp  calorie_counting.t.cpp
02/: CMakeLists.txt  advent02.cpp  rock_paper_scissors.cpp  rock_paper_scissors.hpp  rock_paper_scissors.t.cpp
03/: CMakeLists.txt  advent03.cpp  rucksack_reorganization.cpp  rucksack_reorganization.hpp  rucksack_reorganization.t.cpp
04/: CMakeLists.txt  advent04.cpp  camp_cleanup.cpp  camp_cleanup.hpp  camp_cleanup.t.cpp
05/: CMakeLists.txt  advent05.cpp  supply_stacks.cpp  supply_stacks.hpp  supply_stacks.t.cpp
06/: CMakeLists.txt  advent06.cpp  tuning_trouble.cpp  tuning_trouble.hpp  tuning_trouble.t.cpp
07/: CMakeLists.txt  advent07.cpp  no_space_left_on_device.cpp  no_space_left_on_device.hpp  no_space_left_on_device.t.cpp
08/: CMakeLists.txt  advent08.cpp  treetop_tree_house.cpp  treetop_tree_house.hpp  treetop_tree_house.t.cpp
09/: CMakeLists.txt  advent09.cpp  rope_bridge.cpp  rope_bridge.hpp  rope_bridge.t.cpp
10/: CMakeLists.txt  advent10.cpp  cathode_ray_tube.cpp  cathode_ray_tube.hpp  cathode_ray_tube.t.cpp
11/: CMakeLists.txt  advent11.cpp  monkey_in_the_middle.cpp  monkey_in_the_middle.hpp  monkey_in_the_middle.t.cpp
12/: CMakeLists.txt  advent12.cpp  hill_climbing_algorithm.cpp  hill_climbing_algorithm.hpp  hill_climbing_algorithm.t.cpp
13/: CMakeLists.txt  advent13.cpp  distress_signal.cpp  distress_signal.hpp  distress_signal.t.cpp
14/: CMakeLists.txt  advent14.cpp  regolith_reservoir.cpp  regolith_reservoir.hpp  regolith_reservoir.t.cpp
15/: CMakeLists.txt  advent15.cpp  beacon_exclusion_zone.cpp  beacon_exclusion_zone.hpp  beacon_exclusion_zone.t.cpp
16/: CMakeLists.txt  advent16.cpp  proboscidea_volcanium.cpp  proboscidea_volcanium.hpp  proboscidea_volcanium.t.cpp
17/: CMakeLists.txt  advent17.cpp  pyroclastic_flow.cpp  pyroclastic_flow.hpp  pyroclastic_flow.t.cpp
18/: CMakeLists.txt  advent18.cpp  boiling_boulders.cpp  boiling_boulders.hpp  boiling_boulders.t.cpp
19/: CMakeLists.txt  advent19.cpp  not_enough_minerals.cpp  not_enough_minerals.hpp  not_enough_minerals.t.cpp
20/: CMakeLists.txt  advent20.cpp  grove_positioning_system.cpp  grove_positioning_system.hpp  grove_positioning_system.t.cpp
21/: CMakeLists.txt  advent21.cpp  monkey_math.cpp  monkey_math.hpp  monkey_math.t.cpp
22/: CMakeLists.txt  advent22.cpp  monkey_map.cpp  monkey_map.hpp  monkey_map.t.cpp
23/: CMakeLists.txt  advent23.cpp  unstable_diffusion.cpp  unstable_diffusion.hpp  unstable_diffusion.t.cpp
24/: CMakeLists.txt  advent24.cpp  blizzard_basin.cpp  blizzard_basin.hpp  blizzard_basin.t.cpp
25/: CMakeLists.txt  advent25.cpp  full_oft_hot_air.cpp  full_oft_hot_air.hpp  full_oft_hot_air.t.cpp
